tests/sksl/errors/OpaqueTypeAssignment.glsl
### Compilation failed:

error: 3: variables of type 'sampler' must be global
error: 3: opaque type 'sampler' cannot use initializer expressions
error: 4: assignments to opaque type 'sampler' are not permitted
3 errors
